Limit maximum backtrace depth to prevent infinite loop on corrupted stacks. Update documentation. Add . to PERL5LIB to make tests working with new perl.

--- a/t/Makefile
+++ b/t/Makefile
@@ -2,7 +2,7 @@ INPUTDIR := inputdir
 PROVE := prove
 
 test: $(INPUTDIR)/core $(INPUTDIR)/proc
-	$(PROVE) *.t
+	PERL5LIB=$(PERL5LIB):. $(PROVE) *.t
 
 $(INPUTDIR)/crash: crash.c
 	mkdir -p $(INPUTDIR)
